--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.15.5",
+    "@sanity/image-url": "1",
+    "@sanity/overlays": "^2.3.28",
+    "@sanity/react-loader": "^1.9.4",
+    "@sanity/vision": "3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "next": "14.1.3",
+    "next-sanity": "^8.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "sanity": "3",
+    "server-only": "^0.0.1",
+    "styled-components": "6",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
