--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@sanity/vision": "3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "get-video-id": "^4.1.5",
     "next": "14.1.3",
     "next-sanity": "^8.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-lite-youtube-embed": "^2.4.0",
     "sanity": "3",
     "server-only": "^0.0.1",
     "styled-components": "6",
@@ -34,6 +36,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
